# okapi

examples/json-web-api/: Cargo.toml
rocket-okapi/: Cargo.toml
rocket-okapi-codegen/: Cargo.toml
rocket-okapi/src/request/: mod.rs
rocket-okapi/src/response/: mod.rs
