[package]
name = "rocket_okapi_codegen"
description = "Macros supporting rocket_okapi"
repository = "https://github.com/GREsau/okapi"
version = "0.5.1"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"
license = "MIT"
keywords = ["rust", "openapi", "swagger", "rocket"]

[lib]
proc-macro = true

[dependencies]
darling = "0.10"
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rocket_http = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "549c9241c41320fc5af76b53c2ffc3bd8db88f8c" }
