[package]
name = "rocket_okapi"
description = "OpenAPI (AKA Swagger) document generation for Rocket applications"
repository = "https://github.com/GREsau/okapi"
version = "0.5.1"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"
license = "MIT"
keywords = ["rust", "openapi", "swagger", "rocket"]

[dependencies]
schemars = "0.7.0"
okapi = { version = "0.4.0", path = "../okapi" }
rocket_okapi_codegen = { version = "=0.5.1", path = "../rocket-okapi-codegen" }
serde = "1.0"
serde_json = "1.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "1369dc47a357567ec3d3d711e318248dabd4b7f7" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "549c9241c41320fc5af76b53c2ffc3bd8db88f8c", default-features = false, features = ["json"] }
